--- a/src/app/Cpmponents/Cards/cards/cards.component.css
+++ b/src/app/Cpmponents/Cards/cards/cards.component.css
@@ -112,3 +112,7 @@ div p #Price {
 #main-caurosel:hover .like-icon {
   visibility: visible;
 }
+
+#main-caurosel{
+  width:fit-content !important;
+}
