--- a/src/app/Cpmponents/host-reservation/host-reservation.component.html
+++ b/src/app/Cpmponents/host-reservation/host-reservation.component.html
@@ -1,5 +1,5 @@
 <br><br>
-    <div class="container d-flex">
+    <div class="container d-flex"style="display:block">
         <div class="tabs">
             <ul class="nav nav-tabs">
                 <li class="nav-item">
@@ -9,6 +9,45 @@
                   <a class="nav-link" href="#">Reservations</a>
                 </li>
               </ul>
+
         </div>
         <button type="button" class="btn btn-outline-danger btn-lg" style="margin-left: 300px;">Continue Advertisment</button>
+       
+           
+          </div>
+         
+         
+        <br><br><br>
+
+
+        
+<div class="container" style="padding-left: 240px;">
+  <div class="row">
+    <div class="col-md-10">
+      <div class="card shadow">
+        <div class="card-header bg-danger text-white d-flex justify-content-between align-items-center">
+          <h4 class="card-title mb-0">Amenities</h4>
+         
+        </div>
+        <div class="card-body">
+          <div class="table-responsive" style="padding-left:50px ; padding-right:50px ;">
+            <table class="table table-hover">
+              <thead>
+                <tr  >
+                  <th>Id</th>
+                  <th>Icon</th>
+                  <th>Content</th>
+                </tr>
+              </thead>
+             
+            </table>
+          </div>
+        </div>
+      </div>
     </div>
+  </div>
+</div>
+
+
+    
+    
