host-reservaion updates

--- a/src/app/Cpmponents/your-properties/your-properties.component.html
+++ b/src/app/Cpmponents/your-properties/your-properties.component.html
@@ -3,19 +3,19 @@
   <div class="tabs">
     <ul class="nav nav-tabs">
       <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="#"
+        <a class="nav-link active" aria-current="page" 
           >Your Properties</a
         >
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Reservations</a>
+        <a class="nav-link" routerLink="/host-reservations">Reservations</a>
       </li>
     </ul>
   </div>
   <button
     type="button"
     class="btn btn-outline-danger btn-lg"
-    style="margin-left: 300px"
+    style="margin-left: 400px"
   >
     Continue Advertisment
   </button>
