--- a/src/app/Cpmponents/host-reservation/host-reservation.component.html
+++ b/src/app/Cpmponents/host-reservation/host-reservation.component.html
@@ -1,52 +1,54 @@
 <br><br>
-    <div class="container d-flex"style="display:block">
-        <div class="tabs">
+    <div class="container d-flex">
+              <div class="tabs">
             <ul class="nav nav-tabs">
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#">Your Properties</a>
+                <li class="nav-item" styling >
+                  <a class="nav-link " aria-current="page" routerLink="/your-property">Your Properties</a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Reservations</a>
+                <li class="nav-item"  >
+                  <a class="nav-link active" routerLink="/host-reservations" >Reservations</a>
                 </li>
               </ul>
 
         </div>
-        <button type="button" class="btn btn-outline-danger btn-lg" style="margin-left: 300px;">Continue Advertisment</button>
+        <button type="button" class="btn btn-outline-danger btn-lg"  style="margin-left: 750px;" routerLink="/add-property">Continue Advertisment</button>
        
-           
+     
           </div>
          
          
-        <br><br><br>
+        <br><br>
 
 
         
-<div class="container" style="padding-left: 240px;">
-  <div class="row">
-    <div class="col-md-10">
-      <div class="card shadow">
-        <div class="card-header bg-danger text-white d-flex justify-content-between align-items-center">
-          <h4 class="card-title mb-0">Amenities</h4>
-         
-        </div>
-        <div class="card-body">
-          <div class="table-responsive" style="padding-left:50px ; padding-right:50px ;">
-            <table class="table table-hover">
-              <thead>
-                <tr  >
-                  <th>Id</th>
-                  <th>Icon</th>
-                  <th>Content</th>
-                </tr>
-              </thead>
-             
-            </table>
+        <div class="container" >
+          <div class="row">
+            <div class="col-md-12">
+              <div class="card shadow">
+                <div class="card-header bg-danger text-white d-flex justify-content-between align-items-center">
+                  <h4 class="card-title mb-0">Properties</h4>
+                
+                </div>
+                <div class="card-body">
+                  <div class="table-responsive" style="padding-left:50px ; padding-right:50px ;">
+                    <table class="table table-hover" >
+                      <thead >
+                        <tr  >
+                          <th>Check In</th>
+                          <th>Check Out</th>
+                          <th>Number of guest</th>
+                          <th>Price</th>
+
+                        </tr>
+                      </thead>
+                    
+                    </table>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
-      </div>
-    </div>
-  </div>
-</div>
 
 
     
