--- a/src/app/Cpmponents/Cards/cards/cards.component.css
+++ b/src/app/Cpmponents/Cards/cards/cards.component.css
@@ -64,6 +64,11 @@ li {
     Helvetica Neue, sans-serif;
   font-size: 16px;
 }
+
+a{
+  color:black;
+  text-decoration: none;
+}
 div #Duration #distance {
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
