--- a/src/app/Cpmponents/add-property/add-property.component.html
+++ b/src/app/Cpmponents/add-property/add-property.component.html
@@ -349,7 +349,7 @@
             <div class="row">
               <div class="button-container">
               <button class="btn btn-primary" id="add-room">Add Another Room</button>
-              <button class="btn btn-primary"  id="save-room">Save Room</button>
+              <button class="btn btn-primary" (click)="addRoom()" id="save-room">Save Room</button>
               <button class="btn btn-primary" (click)="save()" id="save-all">Save All</button>
               <button class="btn btn-danger" id="delete-room">Delete Room</button>
             </div>
@@ -386,19 +386,6 @@
               const roomTypeDetails = roomTypes.find((type) => type.type === roomType)?.details.type || '';
               roomCounter++;
               roomCounterEl.textContent = `${currentRooms}\n${roomCounter} ${roomTypeDetails}`;
-            });
-            
-            document.getElementById('save-room').addEventListener('click', function() {
-              // Implement save room functionality here
-            });
-            
-            document.getElementById('save-all').addEventListener('click', function() {
-              // Implement save all functionality here
-              console.log("Hello");
-            });
-            
-            document.getElementById('delete-room').addEventListener('click', function() {
-              // Implement delete room functionality here
             });
           </script>
         </mat-step>
