--- a/src/app/Cpmponents/card-details/card-details.component.html
+++ b/src/app/Cpmponents/card-details/card-details.component.html
@@ -181,12 +181,34 @@
         </div>
         <br /><br />
 
-        <button type="submit" class="container btn btn-danger">Reserve</button>
+        <button type="submit" class="container btn btn-danger"  data-bs-toggle="modal" data-bs-target="#exampleModal">Reserve</button>
         <hr />
         <span style="font-weight: bold; font-size: large">Total</span>
         <span id="total">$<span>308</span></span>
       </form>
     </div>
   </div>
-  
+
 </div>
+
+
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+
